[gd_scene load_steps=19 format=3 uid="uid://buhsyo1luhxbm"]

[ext_resource type="Script" uid="uid://cm0yx5elt23ld" path="res://scripts/lover/lover.gd" id="1_hj7k7"]
[ext_resource type="AudioStream" uid="uid://b2qi2esqtr5vq" path="res://audio/sfx/click.wav" id="2_670pt"]
[ext_resource type="PackedScene" uid="uid://cuxjkncqb8mx6" path="res://objects/characters/human_animator.tscn" id="2_rmcuh"]
[ext_resource type="Script" uid="uid://bvoyt6bm5coqt" path="res://scripts/lover/lover_follower.gd" id="3_7mh6s"]
[ext_resource type="Script" uid="uid://casnc1jootvaf" path="res://scripts/lover/lover_state_machine.gd" id="4_y040x"]
[ext_resource type="Texture2D" uid="uid://dtso1iiu8g2wr" path="res://art/UI/HeartBorder.png" id="5_2jkde"]
[ext_resource type="Script" uid="uid://d0koexjdo2axm" path="res://scripts/lover/lover_patrol.gd" id="6_670pt"]
[ext_resource type="Texture2D" uid="uid://d1qvhhs1cputj" path="res://art/UI/HeartFill.png" id="6_b326f"]
[ext_resource type="Script" uid="uid://dvl11tcr2o1df" path="res://scripts/lover/lover_expressions.gd" id="7_ah3v8"]
[ext_resource type="Texture2D" uid="uid://dmgurgm2kv8a2" path="res://art/UI/expressions/expression_alerted.png" id="9_nusjl"]
[ext_resource type="Texture2D" uid="uid://jksmeolg7flo" path="res://art/UI/expressions/expression_love.png" id="9_phngk"]
[ext_resource type="Texture2D" uid="uid://cbirjpvry33od" path="res://art/UI/expressions/expression_sad.png" id="10_jvr6k"]
[ext_resource type="Texture2D" uid="uid://cbsrktlop3ijr" path="res://art/UI/expressions/expression_attack.png" id="11_if15e"]
[ext_resource type="Script" uid="uid://ddocj6ctltjkb" path="res://scripts/lover/lover_partner_manager.gd" id="13_phngk"]
[ext_resource type="Script" uid="uid://ugi2b1mwemlf" path="res://scripts/vfx/lightning_beam.gd" id="14_jvr6k"]
[ext_resource type="FontFile" uid="uid://b8i3q121b40nv" path="res://art/fonts/MinimalPixelFont.ttf" id="16_7x72y"]
[ext_resource type="Script" uid="uid://cr5cvfl2lpwkc" path="res://scripts/vfx/jealous_popup.gd" id="16_x182d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acjsf"]
size = Vector2(20, 23)

[node name="Lover" type="CharacterBody2D" groups=["lovers"]]
visibility_layer = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_hj7k7")
click_sound = ExtResource("2_670pt")

[node name="HumanAnimator" parent="." instance=ExtResource("2_rmcuh")]
modulate = Color(2, 2, 2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_acjsf")

[node name="BeamToNode" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="HeartBar" type="TextureProgressBar" parent="."]
z_index = 5
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -31.0
offset_right = 10.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
step = 0.3
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("5_2jkde")
texture_progress = ExtResource("6_b326f")

[node name="Expression" type="TextureRect" parent="."]
z_index = 4
offset_left = -4.0
offset_top = -21.0
offset_right = 4.0
offset_bottom = -12.0
texture = ExtResource("9_nusjl")
expand_mode = 1
stretch_mode = 3

[node name="Lover" type="Node" parent="."]

[node name="LoverFollower" type="Node" parent="Lover"]
script = ExtResource("3_7mh6s")
follow_offset = Vector2(10, 0)
metadata/_custom_type_script = "uid://bvoyt6bm5coqt"

[node name="LoverStateMachine" type="Node" parent="Lover"]
script = ExtResource("4_y040x")
metadata/_custom_type_script = "uid://casnc1jootvaf"

[node name="LoverPatrol" type="Node" parent="Lover"]
script = ExtResource("6_670pt")
metadata/_custom_type_script = "uid://d0koexjdo2axm"

[node name="LoverExpressions" type="Node" parent="Lover" node_paths=PackedStringArray("expression_node")]
script = ExtResource("7_ah3v8")
expression_node = NodePath("../../Expression")
alerted_sprite = ExtResource("11_if15e")
love_sprite = ExtResource("9_phngk")
sad_sprite = ExtResource("10_jvr6k")
metadata/_custom_type_script = "uid://dvl11tcr2o1df"

[node name="LoverPartnerManager" type="Node" parent="Lover"]
script = ExtResource("13_phngk")
metadata/_custom_type_script = "uid://ddocj6ctltjkb"

[node name="LightningBeam" type="Node2D" parent="."]
position = Vector2(0, -17)
script = ExtResource("14_jvr6k")
segments = 5
jaggedness = 5.0

[node name="Line2D" type="Line2D" parent="LightningBeam"]
self_modulate = Color(3, 3, 3, 1)
points = PackedVector2Array(0, 0, 15, 0)
width = 1.0
default_color = Color(0.669804, 0.0159284, 5.29438e-07, 1)

[node name="JealousPopup" type="Node2D" parent="."]
script = ExtResource("16_x182d")
lifetime = 3.0
rise_distance = 5.0
ease_curve = 1.0

[node name="Label" type="Label" parent="JealousPopup"]
offset_left = -19.0
offset_top = -19.0
offset_right = 21.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("16_7x72y")
theme_override_font_sizes/font_size = 9
text = "jealous!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
